--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,11 @@
 
 # dependencies
 /node_modules
+/cypress/reports/*
+/cypress/downloads/*
+/cypress/screenshots/*
+/cypress/videos/*
+
 
 # testing
 /coverage
