--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@4tw/cypress-drag-drop": "^2.3.0",
     "cypress-file-upload": "^5.0.8",
     "cypress-iframe": "^1.0.1",
+    "cypress-mochawesome-reporter": "^3.8.2",
     "cypress-xpath": "^2.0.1"
   }
 }
